feat(neighborhoods): introduce coarse-grained generic moves (#2610)