@@ -2,12 +2,14 @@ package ai.timefold.solver.core.impl.domain.solution.descriptor;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 
 import ai.timefold.solver.core.impl.domain.entity.descriptor.EntityDescriptor;
 import ai.timefold.solver.core.preview.api.domain.metamodel.GenuineEntityMetaModel;
 import ai.timefold.solver.core.preview.api.domain.metamodel.GenuineVariableMetaModel;
+import ai.timefold.solver.core.preview.api.domain.metamodel.PlanningEntityMetaModel;
 import ai.timefold.solver.core.preview.api.domain.metamodel.PlanningListVariableMetaModel;
 import ai.timefold.solver.core.preview.api.domain.metamodel.PlanningSolutionMetaModel;
 import ai.timefold.solver.core.preview.api.domain.metamodel.PlanningVariableMetaModel;
@@ -19,6 +21,11 @@ import org.jspecify.annotations.NullMarked;
 @NullMarked
 public final class DefaultGenuineEntityMetaModel<Solution_, Entity_>
         implements GenuineEntityMetaModel<Solution_, Entity_>, InnerPlanningEntityMetaModel<Solution_, Entity_> {
+
+    static final Comparator<PlanningEntityMetaModel<?, ?>> ENTITY_META_MODEL_COMPARATOR =
+            Comparator.comparingInt(
+                    (PlanningEntityMetaModel<?, ?> entityMetaModel) -> ((InnerPlanningEntityMetaModel<?, ?>) entityMetaModel)
+                            .entityDescriptor().getOrdinal());
 
     private final EntityDescriptor<Solution_> entityDescriptor;
     private final PlanningSolutionMetaModel<Solution_> solution;
@@ -59,7 +66,7 @@ public final class DefaultGenuineEntityMetaModel<Solution_, Entity_>
         return switch (genuineVariables.size()) {
             case 0 -> throw new IllegalStateException("The entity class (%s) has no genuine variables."
                     .formatted(type().getCanonicalName()));
-            case 1 -> (GenuineVariableMetaModel<Solution_, Entity_, Value_>) genuineVariables.get(0);
+            case 1 -> (GenuineVariableMetaModel<Solution_, Entity_, Value_>) genuineVariables.getFirst();
             default -> throw new IllegalStateException("The entity class (%s) has multiple genuine variables (%s)."
                     .formatted(type().getCanonicalName(), genuineVariables));
         };
@@ -180,6 +187,11 @@ public final class DefaultGenuineEntityMetaModel<Solution_, Entity_>
                     .formatted(variable.name(), type.getSimpleName()));
         }
         variables.add(variable);
+    }
+
+    @Override
+    public int compareTo(PlanningEntityMetaModel<Solution_, Entity_> other) {
+        return ENTITY_META_MODEL_COMPARATOR.compare(this, other);
     }
 
     @Override
